# RIBA-DAW

./: .gitignore  DESKTOP.md  DESKTOP_RELEASE.md  design_guidelines.json
.emergent/: emergent.yml
.github/workflows/: release.yml
backend/: conftest.py  pytest.ini  requirements.txt  server.py  setup_icons.py
backend/ai/: __init__.py  album.py  assistant.py  generator.py  genesis.py  library.py  library_v2.py  midi.py  music.py  oauth_flow.py  promo.py  reel.py  remix.py  scheduler.py  share.py  snippets.py  stems.py  storytelling.py  studio_live.py  translate.py
backend/tests/: _e2e_magic_remix.py  test_ai_endpoints.py  test_album_and_scheduler.py  test_bantu_hardware.py  test_bantu_parity.py  test_boot_and_snippets.py  test_featured_curation.py  test_generator_endpoints.py  test_generator_extensions.py  test_genesis_endpoint.py  test_launch_visuals.py  test_library_v2.py  test_locale_coverage.py  test_midi.py  test_midi_learn.py  test_midi_snapshots.py  (+14 more)
docs/: LAUNCH_DAY_KIT.md
frontend/: package.json
memory/: PRD.md
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test_reports/: iteration_1.json  iteration_10.json  iteration_11.json  iteration_12.json  iteration_13.json  iteration_14.json  iteration_15.json  iteration_16.json  iteration_17.json  iteration_18.json  iteration_19.json  iteration_2.json  iteration_20.json  iteration_3.json  iteration_4.json  iteration_5.json  iteration_6.json  iteration_7.json  iteration_8.json  iteration_9.json
(+81 files in other folders)
